rtsp-media: Fix mutex beeing unlocked while they should be locked

https://bugzilla.gnome.org/show_bug.cgi?id=761226