gst/rtsp-server/rtsp-media.c
@@ -1217,7 +1217,7 @@ gst_rtsp_media_get_retransmission_time (GstRTSPMedia * media)
 
   priv = media->priv;
 
-  g_mutex_unlock (&priv->lock);
+  g_mutex_lock (&priv->lock);
   res = priv->rtx_time;
   g_mutex_unlock (&priv->lock);
 
@@ -1267,7 +1267,7 @@ gst_rtsp_media_get_latency (GstRTSPMedia * media)
 
   priv = media->priv;
 
-  g_mutex_unlock (&priv->lock);
+  g_mutex_lock (&priv->lock);
   res = priv->latency;
   g_mutex_unlock (&priv->lock);
 
@@ -1315,7 +1315,7 @@ gst_rtsp_media_is_time_provider (GstRTSPMedia * media)
 
   priv = media->priv;
 
-  g_mutex_unlock (&priv->lock);
+  g_mutex_lock (&priv->lock);
   res = priv->time_provider;
   g_mutex_unlock (&priv->lock);
 
